--- a/package.json
+++ b/package.json
@@ -44,8 +44,11 @@
     "vite": "^5.4.21"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "electron-squirrel-startup": "^1.0.1",
+    "lucide-react": "^0.562.0",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "react-router": "^7.12.0"
   }
 }
